--- a/quiz.html
+++ b/quiz.html
@@ -611,25 +611,26 @@ window.onValue = onValue;
 </script>
   
 <script>
+
 const QUESTIONS = [
   {
-    question: "What changes during the Raman Effect?",
-    options: ["Speed of light", "Wavelength of scattered light", "Temperature of sample", "Mass of atoms"],
+    question: "The Raman Effect primarily involves a change in which property of light?",
+    options: ["Speed", "Direction", "Frequency (or wavelength)", "Intensity"],
+    correct: 2
+  },
+  {
+    question: "Which principle of scientific experimentation is most similar to A/B testing in SaaS products?",
+    options: ["Peer review", "Controlled variables & hypothesis testing", "Publication", "Random observation"],
     correct: 1
   },
   {
-    question: "The Raman Effect helps scientists identify:",
-    options: ["Planetary motion", "Molecular structure", "Weather systems", "Ocean currents"],
+    question: "In Raman scattering, the energy difference corresponds to:",
+    options: ["Electron spin", "Molecular vibration", "Light speed", "Gravity"],
     correct: 1
   },
   {
-    question: "What is the first step of the scientific method?",
-    options: ["Ask a question", "Form a conclusion", "Publish results", "Conduct experiment"],
-    correct: 0
-  },
-  {
-    question: "What does pH measure?",
-    options: ["Pressure", "Acidity or basicity", "Density", "Speed"],
+    question: "A SaaS algorithm improving from user data best represents which scientific principle celebrated on National Science Day?",
+    options: ["Static equilibrium", "Experimental iteration", "Inertial frame", "Closed system"],
     correct: 1
   }
 ];
