--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Science Station – National Science Day 2026 Chennai | ZS Trade Show
 
       <ul class="nav-menu" id="navMenu">
         <li><a href="about.html" class="nav-link">About</a></li>
-        <li><a href="blog/." class="nav-link">Blog</a></li>
+        <li><a href="blog/" class="nav-link">Blog</a></li>
         <li><a href="contact.html" class="nav-link">Contact</a></li>
         <li><a href="#features" class="nav-link">Science Exhibits</a></li>
         <li><a href="#quiz" class="nav-link">Quiz</a></li>
