--- a/exhibits.html
+++ b/exhibits.html
@@ -587,7 +587,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="exhibits.html" class="active">Exhibits</a></li>
       <li><a href="quiz.html">Quiz</a></li>
-      <li><a href="blog.html">Blog</a></li>
+      <li><a href="https://mmegakalai19-bit.github.io/science-station/blog/">Blog</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
