--- a/about.html
+++ b/about.html
@@ -515,9 +515,11 @@
     <nav class="nav">
       <span class="nav__brand">Science Station</span>
       <ul class="nav__links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="exhibits.html">Exhibits</a></li>
-        <li><a href="about.html" class="nav__active">About</a></li>
+        <li><a href="about.html" class="nav_active">About</a></li>
+        <li><a href="blog.html" class="nav-link">Blog</a></li>
+        <li><a href="contact.html" class="nav-link">Contact</a></li>
+        <li><a href="exhibits.html" class="nav-link">Science Exhibits</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
       </ul>
     </nav>
 
