--- a/contact.html
+++ b/contact.html
@@ -472,11 +472,11 @@ Contact Science Station | ZS Trade Show 2026 Chennai – National Science Day Ex
   <nav class="nav">
     <div class="nav-brand">SCIENCE STATION</div>
     <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="exhibits.html">Exhibits</a>
-      <a href="quiz.html">Quiz</a>
-      <a href="contact.html" class="nav-active">Contact</a>
+      <li><a href="about.html" class="nav-link">About</a></li>
+        <li><a href="blog.html" class="nav-link">Blog</a></li>
+        <li><a href="contact.html" class="nav-active">Contact</a></li>
+        <li><a href="exhibits.html" class="nav-link">Science Exhibits</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
     </div>
   </nav>
 
