--- a/blog.html
+++ b/blog.html
@@ -621,12 +621,11 @@
   <nav class="nav" aria-label="Site navigation">
     <div class="nav__logo">Science Station</div>
     <ul class="nav__links">
-      <li><a href="https://mmegakalai19-bit.github.io/science-station/index.html">Home</a></li>
-      <li><a href="https://mmegakalai19-bit.github.io/science-station/exhibits.html">Exhibits</a></li>
-      <li><a href="https://mmegakalai19-bit.github.io/science-station/blog/" class="active">Blog</a></li>
-      <li><a href="https://mmegakalai19-bit.github.io/science-station/quiz.html">Quiz</a></li>
-      <li><a href="https://mmegakalai19-bit.github.io/science-station/about.html">About</a></li>
-      <li><a href="https://mmegakalai19-bit.github.io/science-station/contact.html">Contact</a></li>
+      <li><a href="about.html" class="nav-link">About</a></li>
+        <li><a href="blog.html" class="nav-active">Blog</a></li>
+        <li><a href="contact.html" class="nav-link">Contact</a></li>
+        <li><a href="exhibits.html" class="nav-link">Science Exhibits</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
     </ul>
   </nav>
 
