--- a/exhibits.html
+++ b/exhibits.html
@@ -584,12 +584,11 @@
   <nav class="nav" aria-label="Site navigation">
     <div class="nav__logo">Science Station</div>
     <ul class="nav__links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="exhibits.html" class="active">Exhibits</a></li>
-      <li><a href="quiz.html">Quiz</a></li>
-      <li><a href="https://mmegakalai19-bit.github.io/science-station/blog/">Blog</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="about.html" class="nav-link">About</a></li>
+        <li><a href="blog.html" class="nav-link">Blog</a></li>
+        <li><a href="contact.html" class="nav-link">Contact</a></li>
+        <li><a href="exhibits.html" class="active">Science Exhibits</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
     </ul>
   </nav>
 
