--- a/blog.html
+++ b/blog.html
@@ -703,7 +703,7 @@
               science communicators are turning viral formats into genuine learning moments.
             </p>
             <div class="card__footer">
-              <a href="https://mmegakalai19-bit.github.io/science-station/blog/how-science-memes-improve-learning.html" class="card__btn" aria-label="Read more about How Science Memes Improve Learning">
+              <a href="how-science-memes-improve-learning.html" class="card__btn" aria-label="Read more about How Science Memes Improve Learning">
                 Read More
                 <span class="card__btn-arrow" aria-hidden="true">→</span>
               </a>
@@ -735,7 +735,7 @@
               practitioners are, in fact, applied scientists working with data and controlled tests.
             </p>
             <div class="card__footer">
-              <a href="https://mmegakalai19-bit.github.io/science-station/blog/is-seo-a-scientific-process.html" class="card__btn card__btn--blue" aria-label="Read more about Is SEO a Scientific Process?">
+              <a href="is-seo-a-scientific-process.html" class="card__btn card__btn--blue" aria-label="Read more about Is SEO a Scientific Process?">
                 Read More
                 <span class="card__btn-arrow" aria-hidden="true">→</span>
               </a>
