--- a/how-science-memes-improve-learning.html
+++ b/how-science-memes-improve-learning.html
@@ -285,12 +285,11 @@
     <!-- Navigation -->
     <nav role="navigation">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="exhibits.html">Exhibits</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="quiz.html">Quiz</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html" class="nav-link">About</a></li>
+        <li><a href="blog.html" class="nav-link">Blog</a></li>
+        <li><a href="contact.html" class="nav-link">Contact</a></li>
+        <li><a href="exhibits.html" class="nav-link">Science Exhibits</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
         </ul>
     </nav>
 
