--- a/is-seo-a-scientific-process.html
+++ b/is-seo-a-scientific-process.html
@@ -401,11 +401,11 @@
     <div class="breadcrumb">
         <nav aria-label="Breadcrumb">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><span>→</span></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><span>→</span></li>
-                <li class="current">How the Scientific Method Powers Digital Growth</li>
+                <li><a href="about.html" class="nav-link">About</a></li>
+        <li><a href="blog.html" class="nav-link">Blog</a></li>
+        <li><a href="contact.html" class="nav-link">Contact</a></li>
+        <li><a href="exhibits.html" class="nav-link">Science Exhibits</a></li>
+        <li><a href="quiz.html" class="nav-link">Quiz</a></li>
             </ul>
         </nav>
     </div>
