--- a/index.html
+++ b/index.html
@@ -356,17 +356,18 @@ Science Station is an interactive science exhibition presented during National S
        conceptual exploration, and engaging scientific storytelling to make learning experiential and memorable.
 </p>
         <p class="about-text">
- This immersive experience combines live titration demonstrations, 
-          Raman Effect concept exploration, VR science simulations, and educational science memes to make scientific learning engaging and memorable.
+This immersive experience combines a curated science video presentation,
+live titration demonstrations, Raman Effect concept exploration,
+and educational science memes to make scientific learning engaging and memorable.
 </p>
        <p class="about-text">
-        Step inside a world where <a href="blog.html#vr-science" class="inline-link"><strong>Virtual Reality in Science Education</strong></a> lets you shrink
-        to molecular scale, where a live <strong>Titration Demonstration</strong>
-        shows chemistry happening in real time, and where the
-       <a href="blog.html#raman-effect" class="inline-link"><strong>Raman Effect Demonstration</strong></a>  isn't just a Nobel prize fact — it's a
-        story you can see and touch. And because science deserves a laugh,
-        we've woven in a curated wall of <strong>Science Memes Explained</strong>
-        to prove that curiosity can be contagious — and hilarious.
+        Step inside a world where a curated <strong>Immersive Science Video</strong>
+translates complex concepts into visual storytelling, where a live
+<strong>Titration Demonstration</strong> shows chemistry happening in real time,
+and where the <a href="blog.html#raman-effect" class="inline-link"><strong>Raman Effect Concept</strong></a>
+isn't just a Nobel Prize moment — it's a story you can understand and experience.
+And because science deserves a laugh, we've woven in a curated wall of
+<strong>Science Memes Explained</strong> to prove that curiosity can be contagious — and memorable.
       </p>
       <p class="about-text">
         This is not a textbook. This is not a lecture. This is the lab,
