--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@ Science Station – National Science Day 2026 Chennai | ZS Trade Show
       <!-- ONE H1 on the entire page -->
    <!-- ONE H1 on the entire page -->
    <h1>
-Science Station – ZS Trade Show 2026 National Science Day Exhibition
+Science Station –  National Science Day 2026
 </h1>
       
-      <p class="hero-sub">From Lab to Launchpad</p>
+     
       <p class="hero-tagline">
         Where memes meet molecules, and experiments meet experience.
       </p>
