--- a/quiz.html
+++ b/quiz.html
@@ -624,9 +624,9 @@ const QUESTIONS = [
     correct: 1
   },
   {
-    question: "In Raman scattering, the energy difference corresponds to:",
-    options: ["Electron spin", "Molecular vibration", "Light speed", "Gravity"],
-    correct: 1
+    question: "Why do we yawn when someone else yawns?",
+    options: [" Low oxygen", "Brain cooling", "Mirror neurons", "Muscle tiredness"],
+    correct: 2
   },
   {
     question: "A SaaS algorithm improving from user data best represents which scientific principle celebrated on National Science Day?",
