--- a/quiz.html
+++ b/quiz.html
@@ -628,6 +628,12 @@ const QUESTIONS = [
     options: [" Low oxygen", "Brain cooling", "Mirror neurons", "Muscle tiredness"],
     correct: 2
   },
+
+  {
+    question: "Why does your phone battery drain faster in cold weather?",
+    options: ["Cold absorbs charge", "Chemical reactions slow down", "Screen brightness increases", " Signal becomes weak"],
+    correct: 2
+  },
   {
     question: "A SaaS algorithm improving from user data best represents which scientific principle celebrated on National Science Day?",
     options: ["Static equilibrium", "Experimental iteration", "Inertial frame", "Closed system"],
